# claude-code-zed

claude-code-extension/: Cargo.toml  extension.toml
claude-code-extension/src/: lib.rs
claude-code-server/: Cargo.toml
claude-code-server/src/: lsp.rs  websocket.rs
