[package]
edition = "2021"
name = "claude-code-server"
version = "0.1.1"

[[bin]]
name = "claude-code-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
futures-util = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tower-lsp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
